# vae-burn

./: .gitignore  Cargo.toml  readme.md
src/: batcher.rs  custom_batcher.rs  custom_dataset.rs  data.rs  infer.rs  lib.rs  main.rs  mnist_batcher.rs  mnist_dataset.rs  model.rs  train.rs
