[package]
name = "vae_burn"
version = "0.1.0"
edition = "2021"

[dependencies]
burn = { version = "0.13.2", features=["wgpu", "autodiff", "dataset", "train", "vision"] }
burn-tensor = "0.13.2"

ndarray = "0.15.6"
image = "0.25.1"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[features]
mnist = []
custom = []
default = ["mnist"]